# asimov-module-cli

./: CHANGES.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yaml  release.yaml  tweet-release.yaml
examples/: install_github_release.rs
src/: commands.rs  lib.rs  main.rs  registry.rs
src/commands/: browse.rs  config.rs  disable.rs  enable.rs  find.rs  inspect.rs  install.rs  link.rs  list.rs  resolve.rs  uninstall.rs  upgrade.rs
src/commands/list/: pypi.rs  rubygems.rs
src/registry/: crates.rs  github.rs  http.rs  pypi.rs  rubygems.rs
tests/: install_github_release.rs
