# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-module-cli"
version = "25.0.0-dev.3"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2021"
rust-version = "1.81"
description = "ASIMOV Module Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.so"
repository = "https://github.com/asimov-platform/asimov-module-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["text-processing"]
publish = true

[features]
default = ["all"]
all = []
unstable = ["all"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.0", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.1"

[dev-dependencies]
indoc = "2.0"
temp-dir = "0.1"

[dependencies]
asimov-env = { version = "25.0.0-dev.3" }
asimov-module = { version = "25.0.0-dev.10" }
clap = { version = "4.5", default-features = false }
clientele = { version = "0.3", features = ["serde-json", "tokio"] }
color-print = "=0.3.7"
derive_more = { version = "2", features = ["display"] }
futures = "0.3"
known-types-pypi = { version = "0.0.1", features = ["serde"] }
known-types-rubygems = { version = "0.0.1", features = ["serde"] }
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
zip = "4"
flate2 = "1"
tar = "0.4"
serde_yml = { version = "0.0.12", default-features = false }

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "asimov-module"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "symbols"
#debug = true
