# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-module-cli"
version = "25.0.0-dev.7"
authors = ["ASIMOV Community"]
edition = "2024"
#rust-version = "1.85"
description = "ASIMOV Module Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.sh"
repository = "https://github.com/asimov-platform/asimov-module-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["command-line-utilities", "text-processing"]
publish = true

[features]
default = ["all"]
all = []
unstable = ["all"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.2", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.2"

[dev-dependencies]
indoc = "2.0"
temp-dir = "0.1"

[dependencies]
asimov-env = "25.0.0-dev.19"
asimov-installer = "25.0.0-dev.19"
asimov-module = "25.0.0-dev.19"
clap = { version = "4.5", default-features = false }
clientele = { version = "0.3.8", features = ["serde-json", "tokio"] }
color-print = "=0.3.7"
derive_more = { version = "2", features = ["display"] }
futures = "0.3"
known-types-pypi = { version = "0.0.1", features = ["serde"] }
known-types-rubygems = { version = "0.0.1", features = ["serde"] }
open = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
zip = "4"
flate2 = "1"
tar = "0.4"
serde_yml = { version = "0.0.12", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-module"
path = "src/main.rs"
